[package]
name = "wasm-bin-prot"
version = "0.1.0"
authors = ["creativcoder <creativcoders@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde-bin-prot = {path="../serde-bin-prot"}
wasm-bindgen = "0.2"


[lib]
crate-type = ["cdylib"]
